# jdv-pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: pre-commit.yml  precommit.yml  python-package.yml
poetry_export_hook/: __init__.py  poetry_export.py
pre_commit_hooks/: poetry_export.py
tests/: conftest.py  test.py  test_poetry_export_hook.py
tests/fixtures/: pyproject.toml
