[tool.poetry]
name = "jdv-pre-commit-hooks"
version = "0.1.0"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
packages = [
    { include = "pre_commit_hooks" }
]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
poetry-export = "pre_commit_hooks.poetry_export:main"