[tool.poetry]
name = "poetry_export_hook"
version = "0.0.2"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"


[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[tool.poetry.scripts]
poetry-export = "poetry_export_hook.poetry_export:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


